[tool.poetry]
name = "cliffwalksim"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
loguru = "^0.7.2"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
